--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE HTML>
 <!--
-	Identity by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	Yiling's Website
 -->
 <html>
 	<head>
-		<title>Identity by HTML5 UP</title>
+		<title>Yiling's Website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,8 +19,8 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-							<h1>Jane Doe</h1>
-							<p>Senior Psychonautics Engineer</p>
+							<h1>Yiling Huang</h1>
+							<p>Mathematics B.S. and Statistics B.S. @ UMich</p>
 						</header>
 						<!--
 						<hr />
@@ -73,7 +71,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Jane Doe</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Yiling Huang</li><li>Design: <a href="mailto:yilingh@umich.edu"></a></li>
 						</ul>
 					</footer>
 
