--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-							<h1>Yiling Huang</h1>
+							<span class="avatar"><img src="/Users/hyl/Desktop/Michigan/profile.jpg" alt="" /></span>
+							<h1>Yiling Huang / 黄一凌</h1>
 							<p>Mathematics B.S. and Statistics B.S. @ UMich</p>
 						</header>
 						<!--
@@ -61,9 +61,8 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter">Twitter</a></li>
-								<li><a href="#" class="icon brands fa-instagram">Instagram</a></li>
-								<li><a href="#" class="icon brands fa-facebook-f">Facebook</a></li>
+								<li><a href="https://www.instagram.com/_yilinghuang/?hl=en" class="icon brands fa-instagram">Instagram</a></li>
+								<li><a href="https://www.facebook.com/profile.php?id=100005295211514" class="icon brands fa-facebook-f">Facebook</a></li>
 							</ul>
 						</footer>
 					</section>
@@ -71,7 +70,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Yiling Huang</li><li>Design: <a href="mailto:yilingh@umich.edu"></a></li>
+							<li>&copy; Yiling Huang</li><li>Design: <a href="mailto:yilingh@umich.edu">Email</a></li>
 						</ul>
 					</footer>
 
