--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="/Users/hyl/Desktop/Michigan/profile.jpg" alt="" /></span>
-							<h1>Yiling Huang / 黄一凌</h1>
-							<p>Mathematics B.S. and Statistics B.S. @ UMich</p>
+							<span class="avatar"><img src="images/profile.jpg" alt="" height=50% width=50%></span>
+							<h1>Yiling Huang<br>/ 黄一凌</h1>
+							<p>Mathematics B.S. &amp; Statistics B.S. @ UMich</p>
 						</header>
 						<!--
 						<hr />
@@ -70,7 +70,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Yiling Huang</li><li>Design: <a href="mailto:yilingh@umich.edu">Email</a></li>
+							<li>&copy; Yiling Huang</li><li>Contact: <a href="mailto:yilingh@umich.edu">Email</a></li>
 						</ul>
 					</footer>
 
